= SeqAn Changelog =

Add a new list item '''AT THE TOP''' for each change (excluding trivial things like changes to whitespace and comments).
Link to changsets with `[CHANGESET-NUMBER]` and tickets with `#TICKET-NUMBER` whenever possible.
You can use Trac wiki syntax.

== Trunk ==

 * Documented `getQuality`.

== Release 1.2 ==

 * Splitting file ''sequence_multiple.h'' into ''string_set*.h'', ''iter_concat_virtual.h'', and ''sequence_concatenator.h''.
 * Bound check in `iter()`.
 * Adding `SEQAN_IS_64_BIT` and `SEQAN_IS_64_BIT` macros, defined to either `0` or `1`, depending on the platform.
 * Adjusting `MUM` and `MEM` to new naming schema. (#836)
 * Adding `SEQAN_OMP_PRAGMA` to hide `#pragma omp` when not compiling with OpenMP to suppress warnings. (#353)
 * The test system deletes all files with the same name as temporary file names generated during the tests. (#377)
 * Adding documentation for the alphabets `Dna5Q` and `DnaQ` which allow to store 5/4 nucleotides along with the quality in one byte (`char`).
 * Defining integer types (__int8, __uint8, ...) for MinGW, too.
 * Making snp_store compile with LLVM.
 * Removing type `Byte` since it clashes with zlib (#843).  Note that the types `Ascii` and `Unicode` are deprecated and will be removed soon (#849).
 * Fixing a bug in `iter()` with iterator (#848).
 * Adding module '''parallel''', bootstrapping with atomic primitives and atomic `min()`/`max()` functions, fully tested.
 * Slightly optimized assign for strings when source and target are empty.
 * Slightly optimized `empty()` for strings.
 * Fixing problem with MaxValue<>, MinValue<> of RNG with multiple compilation units.
 * Also defining `std::swap` for strings and string sets.
 * Fixing bug in `windowFindNext()`.
 * Setting flags for RelDebug build type correctly for apps.
 * Removed unused and undocumented `string_value_expand.h` / `String<TValue, ValueExpand<...> >`